@@ -48,6 +48,8 @@ RFCs
 
 Bugfixes
 ~~~~~~~~
+- Fixed absolute path calculation in io.Folder
+  (friebe)
 - Fixed URL parsing of parameters containing square brackets or dots in
   the peer.URL class by replacing parse_str() by a handcrafted parser
   (friebe)
